--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,9 @@
 		<version>0.11.2</version>
 		<scope>runtime</scope>
 	</dependency>
+	
+	<!-- Dependencies for e cache -->
+	
         <!-- Required Nucleus Dependencies -->
         <dependency>
             <groupId>org.hibernate</groupId>
