--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,28 @@
     <!-- xsuaa library -->
     
 		<dependency>
+<groupId>com.sap.cloud.db.jdbc</groupId>
+    <artifactId>ngdbc</artifactId>
+    <version>2.7.14</version>    
+	</dependency>	
+	<dependency>
+			<groupId>io.pivotal.cfenv</groupId>
+			<artifactId>java-cfenv-boot</artifactId>
+			<version>2.1.0.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+    <groupId>com.sap.hana.cloud</groupId>
+    <artifactId>spring-cloud-cloudfoundry-hana-service-connector</artifactId>
+    <version>1.0.4.RELEASE</version>
+</dependency>
+<dependency>
+    <groupId>com.sap.hana.cloud</groupId>
+    <artifactId>spring-cloud-sap-core</artifactId>
+    <version>1.0.4.RELEASE</version>
+</dependency>
+    
+		<dependency>
 			<groupId>com.sap.cloud.security</groupId>
 			<artifactId>java-api</artifactId>
 			<scope>provided</scope>
